# docs

./: .gitignore  LICENSE  README.md  conf.py  index.rst  mkdocs.yml  pyproject.toml  requirements.txt
docs/: gdpr_notice.md  index.md
docs/aims_and_objectives/: index.md  rural_isolation.md  safe_space.md
docs/code-of-conduct/: index.md
docs/equipment/: index.md  usage_guidelines.md  useage_guidelines.md
docs/equipment/consumables/: electrical.md  specialist.md
docs/equipment/crafting/: silhouette.md
docs/equipment/electronics/: benchtop-multimeter.md  digital-oscilloscope.md  jupiter2000.md  multimeters.md
docs/equipment/general/: iron_and_ironingboard.md
docs/equipment/handtools/: electrical_tools.md  general_tools.md
docs/equipment/manufacturing/: 3d_printer.md  scrollsaw.md
docs/infrastructure/: index.md
docs/infrastructure/servers/: mmsvr01.md
docs/rules/: 01_dangerous_behaviour.md  02_be_kind.md  03_young_people.md  04_safeguarding.md  index.md
docs/stylesheets/: extra.css
