[tool.poetry]
name = "makemonmouth_docs"
version = "0.1.0"
description = "Make Monmouth Documentation"
authors = ["Matthew Macdonald-Wallace <matt@doics.co>"]
license = "MIT-Modern-Variant"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.3.1"
mkdocs-material = "^8.3.9"
mkdocs-pymdownx-material-extras = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
